# llm-tnc-comparison

./: .gitignore  README.md  baseline_summary.py  baseline_summary_no_rag.py  deep_eval.py  evaluator.py  extractive_summary.py  extractor_schema.py  graph_rag_exp.sh  key_headings.py  prompts.py  pyproject.toml  utils.py
data/: Jan2015.txt  Mar2023.txt
graph_rag/: settings.yaml
output/: baseline_graphrag.txt  baseline_ollamaEmb_normalChnk.txt  baseline_ollamaEmb_semanticChnk.txt  baseline_openaiEmb_normalChnk.txt  baseline_openaiEmb_semanticChnk.txt  baseline_opensourceEmb_normalChnk.txt  baseline_opensourceEmb_semanticChnk.txt  baseline_overall.txt  extractive_summary.txt  geval_result.json  key_headings.json  llm_as_judge.json  standardise_graphrag.txt
prompts/: community_report_graph.txt  extract_graph.txt  summarize_descriptions.txt
